# Indoor-UWB-Tracking-Platform-Firmware-Tools-

./: .coveragerc  .gitignore  GUIA_RAPIDA.md  INSTRUCCIONES_INSTALACION.md  README.md  README_DATA_ANALYSIS.md  SECURITY_CONFIGURATION.md  SISTEMA_UWB_FINALIZADO.md  TECHNICAL_REPORT.md  alternativas_avanzadas.md  analisis_filtros_resumen.md  analyze_uwb_csv.py  csv_processor.py  filter_comparison_analysis.py  futsal_movement_generator.py  generate_realistic_futsal_data.py  memoria.md  movement_replay.py  mqtt_to_csv_collector.py  pyproject.toml  pytest.ini  requirements.txt  tag_replay_4anchors_opt.py  test_data_sample.csv  test_system.py  test_uwb_system.py  trajectory_3d_processor.py  uwb_analyzer.py  uwb_comparator.py  uwb_data_analyzer.py  uwb_replay_processor.py
FINAL/: anchor_2_improved.ino  anchor_3_improved.ino  anchor_4_improved.ino
FUNCIONA/: log_receiver_opt.py
backup_scripts_20250622_210240/: heatmap_generator.py  performance_analyzer.py  session_comparator.py
common/: config.h  config_indoor.h
integration_scripts/: wordpress_auto_upload.py
mqtt/: uwb_data_collector.py  uwb_data_collector_ultimate.py
outputs/: filter_analysis_20250624_214800.json
processed_data/: latest_processed.csv
replay/: movement_replay.py
reports/: performance_report_20250622_162348.txt
uwb_anchor_10/: anchor_10.ino
uwb_anchor_20/: anchor_20.ino
uwb_anchor_30/: anchor_30.ino
uwb_anchor_40/: anchor_40.ino
uwb_anchor_50/: anchor_50.ino
uwb_data/: analysis_output.txt  analysis_results_30hz.txt  analysis_results_final.txt  analyze_csv.py  analyze_results.py  (+48 more)
(+31 files in other folders)
