[tool.pyright]
# Configuración básica para TFG UWB
pythonVersion = "3.8"
typeCheckingMode = "basic"

# Solo errores críticos
reportMissingImports = true
reportUndefinedVariable = true
reportSyntaxError = true

# Silenciar warnings no críticos
reportAttributeAccessIssue = false
reportOptionalSubscript = false

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta" 